# lode

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  TASKS.md  cliff.toml  deny.toml  lefthook.yml  release-plz.toml  rustfmt.toml  typos.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-plz.yml  release.yml
RFC/: README.md  RFC-0000-Domain-Model.md  RFC-0001-Ingestion-Model.md  RFC-0002-Storage-And-Indexing-Engine.md  RFC-0003-Template-Mining-System.md  RFC-0004-Query-Engine.md  RFC-0005-Insight-Engine.md  RFC-0006-Time-System-And-Ordering.md  RFC-0007-Workspace-Model.md  RFC-0008-Rendering-Layer-TUI.md  RFC-0009-Performance-Budget-And-Telemetry-Model.md  RFC-0010-Plugin-System.md  RFC-0011-Event-And-Telemetry-Bus.md  RFC-0012-Execution-Runtime-Model.md  RFC-0013-Failure-Handling-And-Recovery-Model.md  RFC-0014-Trait-Contracts.md  RFC-0015-Security-And-Access-Model.md  RFC-0016-Configuration-And-CLI-Model.md  RFC-0017-Enrichment-And-Severity-Model.md
crates/lode-cli/: CHANGELOG.md  Cargo.toml
crates/lode-cli/src/: main.rs
crates/lode-core/: CHANGELOG.md  Cargo.toml
crates/lode-core/src/: attributes.rs  event.rs  hash.rs  ids.rs  insight.rs  lib.rs  stream.rs  template.rs
crates/lode-core/src/corpus/: error.rs  miner.rs  mod.rs
crates/lode-core/src/mining/: drain.rs  fingerprint.rs  mod.rs  pattern.rs
crates/lode-parse/: CHANGELOG.md  Cargo.toml
crates/lode-parse/benches/: mining.golden.json  mining.rs
crates/lode-parse/src/: error.rs  lib.rs  mask.rs  miner.rs  tokenize.rs
crates/lode-parse/tests/: corpus.rs  corpus_loader.rs  mask_corpus.rs  tokenize_corpus.rs
crates/lode-parse/tests/common/: corpus_loader.rs  mod.rs
crates/lode-source/: CHANGELOG.md  Cargo.toml
crates/lode-source/src/: lib.rs
crates/lode-storage/: CHANGELOG.md  Cargo.toml
crates/lode-storage/src/: lib.rs
crates/lode-tui/: CHANGELOG.md  Cargo.toml
crates/lode-tui/src/: lib.rs
docs/: phase-0-spec.md  phase-1-spec.md
docs/plans/: phase-1-mining-implementation.md
fixtures/corpus/: manifest.toml
fixtures/corpus/json-lines/: labels.jsonl  templates.json
fixtures/corpus/nginx-access/: labels.jsonl  templates.json
fixtures/corpus/syslog-rfc5424/: labels.jsonl  templates.json
spike/: README.md
spike/rust/: mining_spike.rs  mining_spike_mt.rs  mining_spike_opt.rs
spike/rust-regex/: Cargo.toml
spike/rust-regex/src/: main.rs
spike/swift/: mining_spike.swift  mining_spike_mt.swift  mining_spike_opt.swift  mining_spike_regex.swift
